# sale_monitoring_bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_cron_report.sh
docs/: glossary.md
docs/plans/: 2026-07-06-offline-machines-report.md
docs/specs/: 2026-07-06-offline-machines-report-design.md  README.md
src/sale_monitoring_bot/: __init__.py  __main__.py  config.py  env_bootstrap.py  main.py  project_paths.py
src/sale_monitoring_bot/domain/: __init__.py  entities.py  grouping.py  yougile.py
src/sale_monitoring_bot/infra/: __init__.py  kit_client.py  kit_gateway.py  telegram_client.py  yougile_client.py
src/sale_monitoring_bot/services/: __init__.py  report_formatter.py  scenario_compare.py  scenario_today.py
tasks/offline-machines-report/: TASK.md
tests/: test_config.py  test_env_bootstrap.py  test_grouping.py  test_kit_client.py  test_report_formatter.py  test_scenario_compare_logic.py  test_scenario_offline.py  test_telegram_client.py  test_yougile_client.py
