[project]
name = "sale-monitoring-bot"
version = "0.1.0"
description = "Мониторинг продаж Kit Vending с отчётами в YouGile и Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiogram>=3.24.0",
    "beartype>=0.22.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sale-monitoring-bot = "sale_monitoring_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sale_monitoring_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["sale_monitoring_bot"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "sale_monitoring_bot.infra.kit_client"
disable_error_code = ["prop-decorator"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
